tests/paczka1/small_fuzzy/88801713.err
Error in line 6: ZnxoOitR A318 70,67
Error in line 10: EWqKfUDlN A571 1,2
